{fixed the sign in modal and installation form required fields and search responsiveness and the spacing in the main mobile menu}

--- a/app/webroot/css/app.css
+++ b/app/webroot/css/app.css
@@ -8196,7 +8196,7 @@ input.indexSearchBox {
     left: 0;
     top: 0;
     bottom: 0;
-    margin: auto;
+    margin: 92px auto;
   }
   .register {
     background: none !important;
@@ -9704,7 +9704,7 @@ input[type=range]:focus::-ms-fill-upper {
 .viewers-container {
   margin-top: -60px;
   position: relative;
-  height: 612px;
+  height: auto;
 }
 #viewer-left {
   float: left;
@@ -12918,7 +12918,7 @@ ul.annotations li.annotation:hover {
   background: rgba(0, 0, 0, 0.25);
 }
 #loginModal .login-content {
-  width: 60em;
+  width: 30em;
   height: 30em;
   padding: 0;
   box-shadow: 0px 0px 100px rgba(0, 0, 0, 0.25);
@@ -12927,9 +12927,9 @@ ul.annotations li.annotation:hover {
   padding: 30px;
 }
 #loginModal .login-content .loginSect {
+  display: block;
   position: relative;
-  float: left;
-  width: 50%;
+  width: 100%;
   height: 100%;
   background: #fff;
   color: #0093be;
@@ -12994,9 +12994,8 @@ ul.annotations li.annotation:hover {
 }
 #loginModal .login-content .registerSect {
   position: relative;
-  float: left;
-  width: 50%;
-  height: 100%;
+  width: 100%;
+  height: 68%;
   background: #0093be;
   color: #fff;
 }
@@ -16714,7 +16713,7 @@ input[type="text"]:focus {
 .login > div {
   width: 400px;
   position: relative;
-  margin: 10% auto;
+  margin: 65px auto;
   padding: 5px 20px 13px 20px;
   background: #fff;
 }
