--- a/app/webroot/css/home/main.less
+++ b/app/webroot/css/home/main.less
@@ -299,7 +299,7 @@ input[type="text"]:focus {
 .login > div {
 	width: 400px;
 	position: relative;
-	margin: 10% auto;
+	margin: 65px auto;
 	padding: 5px 20px 13px 20px;
 	background: #fff;
 }
