--- a/app/webroot/css/ui/login.less
+++ b/app/webroot/css/ui/login.less
@@ -127,7 +127,7 @@
     left: 0;
     top: 0;
     bottom: 0;
-    margin: auto;
+    margin: 92px auto;
 
   }
   .register{
