--- a/app/webroot/css/user/login.less
+++ b/app/webroot/css/user/login.less
@@ -49,7 +49,7 @@
     background: rgba(0, 0, 0, .25);
 
     .login-content {
-        width: 60em;
+        width: 30em;
         height: 30em;
         padding: 0;
         box-shadow: 0px 0px 100px rgba(0, 0, 0, .25);
@@ -59,9 +59,9 @@
         }
 
         .loginSect {
+          display: block;
             position: relative;
-            float: left;
-            width: 50%;
+            width: 100%;
             height: 100%;
             background: #fff;
             color: @ArcsBlue;
@@ -134,9 +134,8 @@
 
         .registerSect {
             position: relative;
-            float: left;
-            width: 50%;
-            height: 100%;
+            width: 100%;
+            height: 68%;
             background: @ArcsBlue;
             color: #fff;
 
