--- a/app/webroot/css/viewer/viewer.less
+++ b/app/webroot/css/viewer/viewer.less
@@ -123,7 +123,7 @@ input[type=range]:focus::-ms-fill-upper {
 	margin-top: -60px;
     position: relative;
     // height: 709px;
-    height: 612px;
+    height: auto;
     // border-top: 1px solid #ccc !important;
 }
 
